# sanad-core

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/d1/: MANDATORY_CELLS.md  SCHEMA.md  coverage_matrix.csv  gold-0001.json  gold-0002.json  gold-0003.json  gold-0005.json  gold-0007.json  gold.schema.json
docs/: ENVIRONMENT.md  PROJECT_BRIEF.md  STATUS.md  sanad_90_day_execution_plan.md  sanadfinance_llm_unified_development_study.md
tests/: test_gold_validator.py  test_skeleton.py
tools/: download_bases.sh  env.sh  gpu_check.py  sanad_schema.py  validate_gold.py
