[project]
name = "sanad-core"
version = "0.1.0"
description = "Sanad Track-A (private): reasoning-adapter training, SanadBench construction, eval harness, source registry"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=2.2",
    "scipy>=1.13",
    "pydantic>=2",   # D1 gold-record schema contract (tools/sanad_schema.py) — explicit, not transitive
]

[dependency-groups]
# GPU stacks — local RTX 5090 (Blackwell sm_120) only. TRAIN and SERVE are
# CONFLICTING groups (one venv at a time; `uv sync --group X` swaps):
# no single tree can hold latest-unsloth + vllm + qwen3_5-capable
# transformers — see docs/ENVIRONMENT.md friction entries 6–7.
#
#   uv sync --group train   -> QLoRA/LoRA training, hf downloads, smoke 1-4
#   uv sync --group serve   -> vLLM serving, smoke test 5
#
# TRAIN pins: unsloth floored at latest (Qwen3.5 support, May 2026); its
# caps bound torch (<2.11 -> 2.10 cu128) and trl (<=0.24). transformers
# is pinned ==5.2.0 — the LOWEST release registering qwen3_5, era-matched
# to unsloth-zoo's Qwen3.5 patches (PR #495, 2026-02-25); no artifact
# proves testing against later 5.x (friction 7 has the full chain).
train = [
    "torch",
    "unsloth>=2026.6.9",
    "transformers==5.2.0",
    "datasets",
    "peft",
    "trl",
    "bitsandbytes",
    "accelerate",
    "huggingface-hub",  # `hf` CLI included (no extras needed)
]
# SERVE: vllm 0.24-class resolves its own transformers (5.13) and torch
# (2.11 cu128); vllm vendors qwen3_5 so serving never needed the pin.
# torchvision/torchaudio are declared (not left transitive) because
# [tool.uv.sources] only routes DECLARED deps to the cu128 index — PyPI
# ships CUDA-13-linked builds that break against torch +cu128
# (ENVIRONMENT.md friction 12, found by smoke test 5).
serve = [
    "vllm>=0.24",
    "torchvision",
    "torchaudio",
]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "jsonschema>=4",   # round-trips the emitted data/d1/gold.schema.json in tests
]

[tool.uv]
package = false
# This is a single-machine project (WSL2, linux x86_64). Without this, uv
# also resolves darwin/arm64 splits, where vllm's mlx deps are unsolvable.
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
conflicts = [[{ group = "train" }, { group = "serve" }]]

# Blackwell (sm_120) needs cu128 wheels — PROJECT_BRIEF "Tailored environment spec".
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]   # import tools.sanad_schema / tools.validate_gold from repo root
